https://sourceforge.net/p/eclipse-cs/bugs/346/

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
@@ -145,7 +145,7 @@ CheckstylePreferencePage_titleExportConfig = Export Checkstyle Check Configurati
 
 CheckstylePreferencePage_titleRebuild = Rebuild suggested
 
-CheckstylePreferencePage_txtSuggestRebuild = Note: Changes to to this option only become visible\nafter a full rebuild of your projects.
+CheckstylePreferencePage_txtSuggestRebuild = Note: Changes to this option only become visible\nafter a full rebuild of your projects.
 
 CheckstylePropertyPage_btnActivateCheckstyle = Checkstyle active for this project
 
