http://sourceforge.net/p/eclipse-cs/feature-requests/140/

--- a/net.sf.eclipsecs.core/src/net/sf/eclipsecs/core/messages.properties
+++ b/net.sf.eclipsecs.core/src/net/sf/eclipsecs/core/messages.properties
@@ -5,6 +5,8 @@ Auditor_msgCheckingFile = Checking file {0}...
 
 Auditor_txtUnknownModule = Unknown
 
+AuditorJob_msgBuildProject = Running Checkstyle audit on "{0}"
+
 BuildProjectJob_msgBuildAllProjects = Build all projects
 
 BuildProjectJob_msgBuildProject = Build project "{0}"
