--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
@@ -95,6 +95,7 @@ CheckstylePreferencePage_btnRemove = Remove
 
 CheckstylePreferencePage_btnDefault = Set as Default
 
+CheckstylePreferencePage_txtBackgroundFullBuild0=Run Checkstyle in background on full builds
 CheckstylePreferencePage_txtDefault = Sets the selected Check Configuration as default.\nThe default Check Configuration is used when checking\nprojects without local Check Configurations.
 
 CheckstylePreferencePage_colCheckConfig = Check Configuration
