Fix for issue 364

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
@@ -432,7 +432,7 @@ errorWhileOpeningEditor = Error while opening the file editor.
 
 msgErrorFailedExportConfig = Failed to export CheckConfigurations to external file
 
-CheckstylePreferenceTransfer.name = Checkstyle settings
+CheckstylePreferenceTransfer_name = Checkstyle settings
 
 
 
