#399 change behaviour on internal Checkstyle errors

--- a/net.sf.eclipsecs.core/src/net/sf/eclipsecs/core/messages.properties
+++ b/net.sf.eclipsecs.core/src/net/sf/eclipsecs/core/messages.properties
@@ -3,6 +3,8 @@ Auditor_msgCheckingConfig = Checking {0}
 
 Auditor_msgCheckingFile = Checking file {0}...
 
+Auditor_msgMsgCheckstyleInternalError = Checkstyle execution failed due to an internal error. Please check the error log for details...
+
 Auditor_txtUnknownModule = Unknown
 
 AuditorJob_msgBuildProject = Running Checkstyle audit on "{0}"
