#32: new checkstyle marker property page
This adds a new property page for checkstyle issues, which shows the
severity, group, module and description of the issue.

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
@@ -255,7 +255,7 @@ FileSetEditDialog_msgBuildTestResults = Building test results...
 
 FileSetEditDialog_msgNoFilesetName = The name of the file set must be provided
 
-FileSetEditDialog_noCheckConfigSelected = An Check Configuration must be selected
+FileSetEditDialog_noCheckConfigSelected = A Check Configuration must be selected
 
 FileSetEditDialog_titleCreate = Create a new file set.
 FixCheckstyleMarkersJob_title=Fix Checkstyle markers
@@ -316,7 +316,7 @@ ResolvablePropertiesDialog_colName = Name
 
 ResolvablePropertiesDialog_colValue = Value
 
-ResolvablePropertiesDialog_msgAdditionalProperties = Use this dialog to input values for properties occuring in the Checkstyle configuration file, which are not resolved by any of the other ways to resolve such properties.\nSee the plugin documentation for more info about resolving configuration file properties.
+ResolvablePropertiesDialog_msgAdditionalProperties = Use this dialog to input values for properties occurring in the Checkstyle configuration file, which are not resolved by any of the other ways to resolve such properties.\nSee the plugin documentation for more info about resolving configuration file properties.
 
 ResolvablePropertiesDialog_msgFoundProperties = The following unresolved properties were found:\n{0}\nAdd them to the additional configuration properties?
 
@@ -434,5 +434,8 @@ msgErrorFailedExportConfig = Failed to export CheckConfigurations to external fi
 
 CheckstylePreferenceTransfer_name = Checkstyle settings
 
-
+MarkerPropertyPage_Issue=Issue:
+MarkerPropertyPage_Module=Module:
+MarkerPropertyPage_Group=Group:
+MarkerPropertyPage_Description=Description:
 
