Hint with rule name for suppression
In the marker properties dialog have a hint showing the internal rule
name. While the human readable name is useful to locate a check in the
configuration dialog, the internal rule name is needed to create
suppression comments.

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
@@ -439,4 +439,5 @@ MarkerPropertyPage_Issue=Issue:
 MarkerPropertyPage_Module=Module:
 MarkerPropertyPage_Group=Group:
 MarkerPropertyPage_Description=Description:
+MarkerPropertyPage_SuppressionHint=For suppression comments use "{0}"
 
