--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
@@ -438,4 +438,5 @@ MarkerPropertyPage_Issue=Issue:
 MarkerPropertyPage_Module=Module:
 MarkerPropertyPage_Group=Group:
 MarkerPropertyPage_Description=Description:
+MarkerPropertyPage_SuppressionHint=For suppression comments use "{0}"
 
