Fix #120: checkstyle version in preferences

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
@@ -148,6 +148,7 @@ CheckstylePreferencePage_titleRebuild = Rebuild suggested
 
 CheckstylePreferencePage_txtSuggestRebuild = Note: Changes to this option only become visible\nafter a full rebuild of your projects.
 
+CheckstylePreferencePage_version = The plugin uses Checkstyle version {0}.
 CheckstylePropertyPage_btnActivateCheckstyle = Checkstyle active for this project
 
 CheckstylePropertyPage_btnChangeFilter = Change...
