Multiple fixes of violations views
* fix typos, improve wording
* remove useless action icon (it was the one that is generated by the
PDE wizard)
* pie chart tooltip displayed the percentage as wrong absolute number
* disabling a filter did not refresh the pie chart

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/stats/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/stats/messages.properties
@@ -45,11 +45,11 @@ CheckstyleMarkerFilterDialog_msgInvalidRegex = Invalid regular expression: {0}
 
 CheckstyleMarkerFilterDialog_msgNoRegexDefined = <no regular expressions defined>
 
-CheckstyleMarkerFilterDialog_msgNoWorkingSetSelected = <no woking set selected>
+CheckstyleMarkerFilterDialog_msgNoWorkingSetSelected = <no working set selected>
 
 CheckstyleMarkerFilterDialog_title = Checkstyle markers filter
 
-CheckstyleMarkerFilterDialog_titleMessage = Use this filter settings to specify on which resources/severities\nthe the markers will be shown.
+CheckstyleMarkerFilterDialog_titleMessage = Use these filter settings to specify on which resources/severities\nthe markers will be shown.
 
 CheckstyleMarkerFilterDialog_titleRegexEditor = Edit regular expression filter
 
@@ -69,13 +69,13 @@ GraphStatsView_displayAllCategories = Display categories < 1%
 
 GraphStatsView_displayJavadocErrors = Display Javadoc violations
 
-GraphStatsView_displayListing = Show the violation listing
+GraphStatsView_displayListing = Show the violations listing
 
 GraphStatsView_errorsRepartition = Checkstyle error repartition
 
 GraphStatsView_javadocNotDisplayed = (Javadoc not displayed)
 
-GraphStatsView_lblViewMessage = Graph of Checkstyle violations - {0} markers in {1} categories (Filter matched {0} of {2} items)
+GraphStatsView_lblViewMessage = Graph of Checkstyle violations - {0} markers in {1} categories (filter matched {0} of {2} items)
 
 GraphStatsView_noDataToDisplay = No Checkstyle violations matched the filter settings.
 
@@ -113,13 +113,13 @@ MarkerStatsView_kindOfErrorColumn = Checkstyle violation type
 
 MarkerStatsView_lblDetailMessage = Details of Checkstyle violation "{0}"  - {1} occurrences
 
-MarkerStatsView_lblOverviewMessage = Overview of Checkstyle violations - {0} markers in {1} categories (Filter matched {0} of {2} items)
+MarkerStatsView_lblOverviewMessage = Overview of Checkstyle violations - {0} markers in {1} categories (filter matched {0} of {2} items)
 
 MarkerStatsView_lineColumn = Line
 
 MarkerStatsView_messageColumn = Message
 
-MarkerStatsView_numberOfErrorsColumn = Marker count
+MarkerStatsView_numberOfErrorsColumn = Occurrences
 
 MarkerStatsView_reportGenerationFailed = Report generation has failed.
 
@@ -127,15 +127,15 @@ MarkerStatsView_showDetails = Show details
 
 MarkerStatsView_showDetailsTooltip = Lists all the violations for this type.
 
-MarkerStatsView_unableToOpenGraph = An error occured while opening the graph view "{0}".
+MarkerStatsView_unableToOpenGraph = An error occurred while opening the graph view "{0}".
 
 MarkerStatsView_unableToShowMarker = Error while displaying the marker.
 
 MarkerStatsView_unknownProblem = Unknown
 
-PreferencePage_displayAllCategories = By default, display all types of violation in the pie chart (do not gather percentages under 1%).
+PreferencePage_displayAllCategories = By default, display all types of violations in the pie chart (do not gather percentages under 1%).
 
-PreferencePage_displayJavadocErrors = By default, display Javadoc violations in the Checkstyle stats pie chart.
+PreferencePage_displayJavadocErrors = By default, display Javadoc violations in the Checkstyle statistics pie chart.
 
 StatsViewUtils_checkstyleErrorsCount = {0} Checkstyle violations
 
