Pull #265: violation message locale switchable without restart eclipse

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
@@ -148,6 +148,9 @@ CheckstylePreferencePage_titleRebuild = Rebuild suggested
 
 CheckstylePreferencePage_txtSuggestRebuild = Note: Changes to this option only become visible\nafter a full rebuild of your projects.
 
+CheckstylePreferencePage_lblLocaleLanguage= Rule message language
+CheckstylePreferencePage_lblLocaleLanguages= default,de,en,es,fi,fr,ja,pt,tr,zh
+
 CheckstylePreferencePage_version = The plugin uses Checkstyle version {0}.
 CheckstylePropertyPage_btnActivateCheckstyle = Checkstyle active for this project
 
