Pull #267: add "Open Rule link in browser"

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/stats/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/stats/messages.properties
@@ -133,6 +133,10 @@ MarkerStatsView_unableToShowMarker = Error while displaying the marker.
 
 MarkerStatsView_unknownProblem = Unknown
 
+MarkerStatsView_openRuleLink = Open rule link in browser
+
+MarkerStatsView_openRuleLinkTooptip = Open rule link in browser.
+
 PreferencePage_displayAllCategories = By default, display all types of violations in the pie chart (do not gather percentages under 1%).
 
 PreferencePage_displayJavadocErrors = By default, display Javadoc violations in the Checkstyle statistics pie chart.
@@ -146,3 +150,5 @@ StatsViewUtils_fragmentRootElement = {0} source folder
 StatsViewUtils_packageElement = {0} package
 
 StatsViewUtils_projectElement = {0} project
+
+
