Issue #393: Sort available modules alphabetically
That makes it easier for an end user to locate a wanted module and to
find unknown modules. Also change the label to "Available modules".

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
@@ -20,7 +20,7 @@ CheckConfigurationConfigureDialog_lblConfiguredModules = Configured modules for 
 
 CheckConfigurationConfigureDialog_lblDescription = Description:
 
-CheckConfigurationConfigureDialog_lblKnownModules = Known modules
+CheckConfigurationConfigureDialog_lblAvailableModules=Available modules
 
 CheckConfigurationConfigureDialog_msgEditConfig = Edit checkstyle configuration.
 
