--- a/net.sf.eclipsecs.core/src/net/sf/eclipsecs/core/messages.properties
+++ b/net.sf.eclipsecs.core/src/net/sf/eclipsecs/core/messages.properties
@@ -6,8 +6,8 @@ AuditorJob_msgBuildProject = Running Checkstyle audit on "{0}"
 BuildProjectJob_msgBuildAllProjects = Build all projects
 BuildProjectJob_msgBuildProject = Build project "{0}"
 CheckstyleBuilder_msgErrorUnknown = Unknown
-CheckstyleBuilder_msgWrongBuilderOrder = The project {0} cannot be checked by Checkstyle because the Checkstyle Builder is set to run before the Java Builder. Please go to Project->Properties->Builders and change the Builder ordering that the Checkstyle Builder runs after the Java Builder.
-CheckstyleLog_msgStatusPrefix = Checkstyle-Plugin: {0}
+CheckstyleBuilder_msgWrongBuilderOrder = The project {0} cannot be checked by Checkstyle because the Checkstyle Builder is set to run before the Java Builder. Please go to Project->Properties->Builders and change the Builder order such that the Checkstyle Builder runs after the Java Builder.
+CheckstyleLog_msgStatusPrefix = Checkstyle Plugin: {0}
 ConfigPropertyMetadata_txtNoDescription = No Description Available
 ConfigureDeconfigureNatureJob_msgTaksAddingNature = Configure project nature "{0}"
 errorConfigNameEmpty = Name must not be empty.
@@ -22,7 +22,7 @@ errorNoRootModule = No root module found.
 errorResolveConfigLocation = Location "{0}" cannot be resolved ({1}).
 errorUnknownClasspathEntry = Unknown classpath entry {0}
 errorUnknownFileFormat = Unknown file format: {0}
-errorWritingCheckConfigurations = Failed to write checkstyle plugin configuration file:\\n{0}
+errorWritingCheckConfigurations = Failed to write Checkstyle plugin configuration file:\\n{0}
 errorWritingConfigFile = Failed to write check configurations file
 msgErrorLoadingCheckstyleDTD = Unable to load internal DTD {0}
 ProjectConfigurationType_msgFileNotFound = Could not find {0}
