--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
@@ -12,7 +12,7 @@ CheckConfigurationConfigureDialog_defaultFilterText=Input filter text here
 CheckConfigurationConfigureDialog_lblAvailableModules=Available modules
 CheckConfigurationConfigureDialog_lblConfiguredModules = Configured modules for group "{0}"
 CheckConfigurationConfigureDialog_lblDescription = Description:
-CheckConfigurationConfigureDialog_msgEditConfig = Edit checkstyle configuration.
+CheckConfigurationConfigureDialog_msgEditConfig = Edit Checkstyle configuration.
 CheckConfigurationConfigureDialog_msgReadonlyConfig = The configuration can not be edited.
 CheckConfigurationConfigureDialog_msgRemoveModules = Remove the selected modules from the configuration?
 CheckConfigurationConfigureDialog_titleCheckConfigurationDialog = Checkstyle Configuration
@@ -40,15 +40,15 @@ CheckConfigurationPropertiesDialog_titleCheckConfig = Check Configuration
 CheckConfigurationPropertiesDialog_titleCheckProperties = Check Configuration Properties
 CheckConfigurationPropertiesDialog_titleCopyConfiguration = Create copy of Check Configuration ''{0}''
 CheckConfigurationPropertiesDialog_titleUnresolvedProps = Unresolved Properties found
-CheckstyleLog_titleInternalError = Internal Checkstyle-Plugin error
-CheckstyleLog_titleWarning = Checkstyle-Plugin warning
+CheckstyleLog_titleInternalError = Internal Checkstyle Plugin error
+CheckstyleLog_titleWarning = Checkstyle Plugin warning
 CheckstylePreferencePage_btnConfigure = Configure...
 CheckstylePreferencePage_btnCopy = Copy...
 CheckstylePreferencePage_btnDefault = Set as Default
 CheckstylePreferencePage_btnExport = Export...
 CheckstylePreferencePage_btnNew = New...
 CheckstylePreferencePage_btnProperties = Properties...
-CheckstylePreferencePage_btnRefreshCheckerCache = Refresh cached checkstyle configurations
+CheckstylePreferencePage_btnRefreshCheckerCache = Refresh cached Checkstyle configurations
 CheckstylePreferencePage_btnRemove = Remove
 CheckstylePreferencePage_colCheckConfig = Check Configuration
 CheckstylePreferencePage_colDefault = Default
@@ -68,7 +68,7 @@ CheckstylePreferencePage_lblRebuild = Rebuild projects if needed:
 CheckstylePreferencePage_lblWarnFilesets = Warn before losing configured file sets
 CheckstylePreferencePage_msgCantDelete = The Check Configuration "{0}" is currently in use by a project.\nIt must be removed from all project configurations before it can be deleted.
 CheckstylePreferencePage_msgDelete = Remove check configuration "{0}"?
-CheckstylePreferencePage_msgProjectRelativeConfigNoFound = The project "{0}" does not contain a checkstyle configuration file "{1}".
+CheckstylePreferencePage_msgProjectRelativeConfigNoFound = The project "{0}" does not contain a Checkstyle configuration file "{1}".
 CheckstylePreferencePage_msgRebuild = Some projects need to be rebuilt for the changes to become visible.\n Rebuild these projects?
 CheckstylePreferencePage_nagRebuild = Don't ask me again
 CheckstylePreferencePage_titleCantDelete = Can't Delete
@@ -89,7 +89,7 @@ CheckstylePropertyPage_lblDescription = Description:
 CheckstylePropertyPage_mgsWarnFileSetNagOption = Show this warning again
 CheckstylePropertyPage_msgLocalConfigs = Use this page to set up check configurations that are local to this project.\nThe check configurations data will be stored with the .checkstyle file, allowing for improved teamworking support as other team members won't have to set up the check configuration in the workspace preferences.
 CheckstylePropertyPage_msgRebuild = The project needs to be rebuilt for the changes to become visible.\n Rebuild the project?
-CheckstylePropertyPage_msgWarnFilesets = Existing file set configurations for this project are lost if the checkstyle project properties page is submitted.
+CheckstylePropertyPage_msgWarnFilesets = Existing file set configurations for this project are lost if the Checkstyle project properties page is submitted.
 CheckstylePropertyPage_nagRebuild = Don't ask me again
 CheckstylePropertyPage_tabCheckConfigs = Local Check Configurations
 CheckstylePropertyPage_tabMain = Main
@@ -174,7 +174,7 @@ ProjectConfigurationEditor_chkProtectConfigFile = Protect Checkstyle configurati
 ProjectConfigurationEditor_msgNoProjectInWorkspace={0} is no project in the workspace.
 ProjectConfigurationLocationEditor_btnBrowse = Browse...
 ProjectConfigurationLocationEditor_msgSelectConfigFile = Select the configuration file for this check configuration.
-ProjectConfigurationLocationEditor_titleSelectConfigFile = Select checkstyle configuration file
+ProjectConfigurationLocationEditor_titleSelectConfigFile = Select Checkstyle configuration file
 PropertiesContentAssistProcessor_basedir=Maps to the current project directory.
 PropertiesContentAssistProcessor_configLoc=Maps to the directory the configuration file lies in.
 PropertiesContentAssistProcessor_projectLoc=Same as ${basedir}.
@@ -224,7 +224,7 @@ RuleConfigurationEditDialog_tabAdvanced=Advanced
 RuleConfigurationEditDialog_tabGeneral=General
 RuleConfigurationEditDialog_titleCustMsg=Custom check messages
 RuleConfigurationEditDialog_titleRestoreDefault = Restore default values
-RuleConfigurationEditDialog_titleRuleConfigEditor = Configuration of checkstyle module "{0}"
+RuleConfigurationEditDialog_titleRuleConfigEditor = Configuration of Checkstyle module "{0}"
 SimpleFileSetsEditor_btnManageConfigs = Configure...
 SimpleFileSetsEditor_lblDescription = Description:
 SimpleFileSetsEditor_nameAllFileset = all
