Issue #433: Fix all localization issues
* enable PDE compiler check for missing localizations in all projects
* unify PDE project settings for all plugin projects
* fix missing tooltip
* localize all remaining non-localized strings in plugin.xml
* set translatable property in all own schemas where applicable
* move all localization files to the default OSGi localization property
location and remove the superfluous manifest headers

--- a/net.sf.eclipsecs.core/OSGI-INF/l10n/bundle.properties
+++ b/net.sf.eclipsecs.core/OSGI-INF/l10n/bundle.properties
@@ -37,3 +37,11 @@ DerivedFilesFilter.label         = derived (generated) files
 
 FilesOlderThanOneDayFilter.description  = Exclude all files that are older than one day.
 FilesOlderThanOneDayFilter.label        = files older than one day
+
+Bundle-Name = Eclipse Checkstyle
+Bundle-Vendor = Eclipse Checkstyle Project
+extension-point.addon-provider.name = Checkstyle Addon provider
+extension-point.configuration-types.name = Checkstyle configuration types
+extension-point.configurations.name = Checkstyle configurations
+extension-point.filters.name = Checkstyle filters
+extension-point.save-filters.name = Checkstyle configuration save filters
