--- a/net.sf.eclipsecs.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.sf.eclipsecs.ui/OSGI-INF/l10n/bundle.properties
@@ -44,3 +44,14 @@ CheckstylePreferenceTransfer.description = Copies the workspace configuration fo
 
 PurgeCaches.label = Purge Checkstyle caches
 PurgeCaches.tooltip = Purges internal Checkstyle caches to force reloading of auxiliary configuration files (e.g. suppression.xml)
+Bundle-Name = Eclipse Checkstyle UI
+Bundle-Vendor = Eclipse Checkstyle Project
+annotation.error.label = Checkstyle error
+annotation.warning.label = Checkstyle warning
+annotation.info.label = Checkstyle info
+views.category.name = Checkstyle
+commands.category.name = Checkstyle
+actionSet.label = Checkstyle
+extension-point.quickfix-provider.name = Checkstyle Quickfix provider
+extension-point.filter-editor.name = Checkstyle filter editors
+extension-point.config-types-ui.name = Checkstyle configuration type editors
