Improve preference export description
* use better icon
* add description
* use Eclipse terms

Also remove invalid Javadoc part of preference page.

--- a/net.sf.eclipsecs.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.sf.eclipsecs.ui/OSGI-INF/l10n/bundle.properties
@@ -39,8 +39,9 @@ MarkerStatsView.name = Checkstyle violations
 
 VotingPage.name = Voting
 
-CheckstylePreferenceTransfer.name = Checkstyle settings
-CheckstylePreferenceTransfer.description = Copies the workspace configuration for the Eclipse Checkstyle Plugin
+CheckstylePreferenceTransfer.name = Checkstyle Preferences
+CheckstylePreferenceTransfer.description = General Checkstyle preferences. Does NOT include Checkstyle configurations. Use the "Export" button next to the configurations table to export those.
+CheckstylePreferenceTransfer.settingsDescription = Copies the workspace configuration for the Eclipse Checkstyle Plugin
 
 PurgeCaches.label = Purge Checkstyle caches
 PurgeCaches.tooltip = Purges internal Checkstyle caches to force reloading of auxiliary configuration files (e.g. suppression.xml)
