Improve eclipse jobs
* shorten job names and progress messages to avoid labels being
artificially shortened by the Eclipse UI
* use 'Checkstyle on "project name"' for builds triggered on projects
* use 'Checkstyle' for invocations on arbitrary selected files
* fix the Eclipse job listening for editors being opened to also use the
EclipseCS icon, label and to actually report some progress

--- a/net.sf.eclipsecs.core/src/net/sf/eclipsecs/core/messages.properties
+++ b/net.sf.eclipsecs.core/src/net/sf/eclipsecs/core/messages.properties
@@ -1,8 +1,8 @@
 Auditor_msgCheckingConfig = Checking {0}
-Auditor_msgCheckingFile = Checking file {0}...
+Auditor_msgCheckingFile = {0}
 Auditor_msgMsgCheckstyleInternalError = Checkstyle execution failed due to an internal error. Please check the error log for details...
 Auditor_txtUnknownModule = Unknown
-AuditorJob_msgBuildProject = Running Checkstyle audit on "{0}"
+AuditorJob_msgBuildProject = Checkstyle on "{0}"
 BuildProjectJob_msgBuildAllProjects = Build all projects
 BuildProjectJob_msgBuildProject = Build project "{0}"
 CheckstyleBuilder_msgErrorUnknown = Unknown
@@ -25,10 +25,11 @@ errorUnknownFileFormat = Unknown file format: {0}
 errorWritingCheckConfigurations = Failed to write Checkstyle plugin configuration file:\\n{0}
 errorWritingConfigFile = Failed to write check configurations file
 msgErrorLoadingCheckstyleDTD = Unable to load internal DTD {0}
+PartsOpenedJob_title = Checkstyle for opened editors
 ProjectConfigurationType_msgFileNotFound = Could not find {0}
 RemoteConfigurationType_errorFileNotFound = File not found: {0}
 RemoteConfigurationType_errorUnknownHost = Unknown host: {0}
 RemoteConfigurationType_msgRemoteCachingFailed = Could not cache remote configuration {0} ({1})
 RemoteConfigurationType_msgUnAuthorized = 401: Authentication failed
-RunCheckstyleOnFilesJob_title = Checking files...
+RunCheckstyleOnFilesJob_title = Checkstyle
 SimpleFileSetsEditor_nameAllFileset = all
