Fix configuration transformation jobs
* Job names are end user visible in the Eclipse UI, therefore just
taking some unique identifier without meaning is not correct.
* Always initialize the progress reporting, even if there is nothing to
count.
* add icon via job family registration

--- a/net.sf.eclipsecs.core/src/net/sf/eclipsecs/core/messages.properties
+++ b/net.sf.eclipsecs.core/src/net/sf/eclipsecs/core/messages.properties
@@ -33,3 +33,5 @@ RemoteConfigurationType_msgRemoteCachingFailed = Could not cache remote configur
 RemoteConfigurationType_msgUnAuthorized = 401: Authentication failed
 RunCheckstyleOnFilesJob_title = Checkstyle
 SimpleFileSetsEditor_nameAllFileset = all
+TransformCheckstyleRulesJob_name=Convert Checkstyle rules
+TransformFormatterRulesJob_name=Convert formatter settings
