--- a/net.sf.eclipsecs.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.sf.eclipsecs.ui/OSGI-INF/l10n/bundle.properties
@@ -56,3 +56,5 @@ actionSet.label = Checkstyle
 extension-point.quickfix-provider.name = Checkstyle Quickfix provider
 extension-point.filter-editor.name = Checkstyle filter editors
 extension-point.config-types-ui.name = Checkstyle configuration type editors
+addnature.label = Add Checkstyle Nature
+removenature.label = Remove Checkstyle Nature
