Improve documentation of Sun coding conventions

--- a/net.sf.eclipsecs.core/OSGI-INF/l10n/bundle.properties
+++ b/net.sf.eclipsecs.core/OSGI-INF/l10n/bundle.properties
@@ -24,7 +24,7 @@ ProjectRelativeCheckConfiguration.label = Project Relative Configuration
 RemoteCheckConfiguration.label = Remote Configuration
 
 GoogleChecks.description     = Checkstyle configuration that checks the Google coding conventions from Google Java Style that can be found at https://google.github.io/styleguide/javaguide.html.
-SunChecks.description        = Checkstyle configuration that checks the sun coding conventions.
+SunChecks.description        = Checkstyle configuration that checks the Sun coding conventions, which can be found at https://www.oracle.com/java/technologies/javase/codeconventions-contents.html.
 
 UnOpenedFilesFilter.description = Excludes all files that are not opened in an editor.
 UnOpenedFilesFilter.label       = files not opened in editor
