Register quickfixes via extension point
* Remove old quickfixprovider extension point. It's entirely useless to
register an OSGi plugin as extender of another plugin. OSGi will deal
with that kind of class loading anyway.
* Instead have a new quickfix extension point, which registers a class
implementing the quickfix related interface and the module that can be
fixed this way.
* Completely avoids loading Checkstyle metadata for looking up
quickfixes of existing problem markers.
* Fix ExplicitInitializationQuickfix throwing exceptions during the
check whether it's applicable.

Fixes #315.
Fixes #561.

--- a/net.sf.eclipsecs.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.sf.eclipsecs.ui/OSGI-INF/l10n/bundle.properties
@@ -58,3 +58,4 @@ extension-point.filter-editor.name = Checkstyle filter editors
 extension-point.config-types-ui.name = Checkstyle configuration type editors
 addnature.label = Add Checkstyle Nature
 removenature.label = Remove Checkstyle Nature
+extension-point.name = checkstyle
