Show module id on property page
Also show the module id of a rule on the marker property page. The same
rule can have multiple different ids in different check configurations.
Therefore it seems most simple to store the module id at the time of
marker creation instead of later calculating it again.

fixes #468

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/messages.properties
@@ -163,6 +163,7 @@ InternalConfigurationEditor_btnImport = Import...
 InternalConfigurationEditor_titleImportDialog = Choose Checkstyle configuration file to import
 MarkerPropertyPage_Description=Description:
 MarkerPropertyPage_Group=Group:
+MarkerPropertyPage_Id=Id:
 MarkerPropertyPage_Issue=Issue:
 MarkerPropertyPage_Module=Module:
 MarkerPropertyPage_SuppressionHint=For suppression comments use "{0}"
